IntroAnimation not showing in mobile fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,6 +135,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
   }
   html {
     @apply font-sans;
